# hermes-quest

./: .gitignore  AGENTS.md  GOAL.md  README.md  SPEC.md  index.html  package.json  tsconfig.app.json
.github/workflows/: ci.yml  release.yml
docs/: AGENT_RULES.md  API_CONTRACT.md  COMPLETION_AUDIT.md  DESIGN.md  EXECUTION_LOG.md  HERMES_CAPABILITY_MATRIX.md  HERMES_INTEGRATION_PLAN.md  LOW_DENSITY_PIXEL_JRPG_UI.md  NATIVE_VERIFICATION.md  PET_MODE_REDESIGN.md  PIXEL_UI_KIT.md  PIXEL_UI_KIT_ASSET_IMPLEMENTATION.md  PRD.md  REFERENCES.md  TASKS.md  TAURI_SPIKE_PLAN.md  WEB_FIDELITY_PASS.md  hermes-guild-v0-design.md  v0-remake-prd.md
prototypes/: hermes-floating-chat-prototype.html
scripts/: check-native-prereqs.sh  check-tauri-config.mjs  cleanup-pixel-assets.py  derive-pixel-ui2-parts.mjs  process-pixel-ui2.mjs
sidecar/: README.md  __init__.py  hermes_companion_sidecar.py  hermes_guild_sidecar.py
sidecar/tests/: __init__.py  test_sidecar.py
src/: App.pet.test.ts  App.tsx  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/bridge/: bridgeFactory.test.ts  bridgeFactory.ts  hermesApiClient.test.ts  hermesApiClient.ts  hermesDashboardApiClient.test.ts  hermesDashboardApiClient.ts  hermesProfileClient.test.ts  hermesProfileClient.ts  hermesProfileDetailsClient.test.ts  hermesProfileDetailsClient.ts  hermesProfileRunClient.test.ts  hermesProfileRunClient.ts  hermesSidecarClient.test.ts  hermesSidecarClient.ts  mockHermesBridge.test.ts  mockHermesBridge.ts  types.ts  (+1 more)
(+8 files in other folders)
