[package]
name = "hermes-companion"
version = "0.1.0"
description = "Hermes Companion desktop workbench"
authors = ["Hermes Companion"]
edition = "2021"

[lib]
name = "hermes_companion_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13.3", features = ["json"] }
